[package]
name = "edgar-defense-toolkit"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
description = "EDGAR defense tools for detecting suspicious bridge play patterns via double-dummy analysis"

[dependencies]
bridge-parsers = { git = "https://github.com/Rick-Wilson/Bridge-Parsers" }
bridge-types = { git = "https://github.com/Rick-Wilson/bridge-types" }
bridge-solver = { git = "https://github.com/Rick-Wilson/bridge-solver" }

iced = { version = "0.14", features = ["tokio"] }
rfd = "0.15"

anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
csv = "1.3"
env_logger = "0.11"
futures = "0.3"
lazy_static = "1.5"
log = "0.4"
rayon = "1.10"
regex = "1.10"
rust_xlsxwriter = "0.93"
serde = { version = "1.0", features = ["derive"] }
ab_glyph = "0.2"
lopdf = "0.38"
png = "0.17"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2"

[[bin]]
name = "bbo-csv"
path = "src/bin/bbo_csv.rs"

[[bin]]
name = "dd-debug"
path = "src/bin/dd_debug.rs"

[[bin]]
name = "edgar-ui"
path = "src/bin/edgar_ui.rs"

[[bin]]
name = "pdf-anon"
path = "src/bin/pdf_anon.rs"

[[bin]]
name = "docx-anon"
path = "src/bin/docx_anon.rs"

[dev-dependencies]
tempfile = "3"
